# murmur

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.example.toml  memory.example.md  murmur.py  plan.md  pyproject.toml  recorder.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
src/murmur/: __init__.py  artifacts.py  cli.py  cloud_diarize.py  cloud_transcribe.py  config.py  grounded_summary.py  hooks.py  recorder.py  speaker_profiles.py
src/murmur/plugins/: calendar.py  diarize.py  memory.py  summarize.py  tasks.py  tasks_extract.py  transcribe.py  tui.py  watch.py
tests/: test_artifacts.py  test_cli.py  test_cloud_diarize.py  test_cloud_transcribe.py  test_config.py  test_diarize.py  test_grounded_summary.py  test_hooks.py  test_memory.py  test_plugins.py  test_recorder.py  test_speaker_profiles.py  test_summarize.py  test_task_approval.py  test_tasks_extract.py  test_watch.py
