[project]
name = "murmur"
version = "0.2.0"
description = "Record system audio from meetings (Zoom, Google Meet, etc.) via PipeWire + FFmpeg"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.3",
]

[project.optional-dependencies]
tui = ["textual>=8.1.1"]
ai = ["dspy>=3.1.3", "litellm>=1.82.4"]
transcribe = ["faster-whisper>=1.0.0"]
diarize = ["pyannote-audio>=3.0", "torch"]
calendar = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
]
tasks = ["murmur[ai]"]
tasks-tw = ["tasklib>=2.0"]
all = [
    "murmur[tui]", "murmur[ai]", "murmur[transcribe]", "murmur[diarize]",
    "murmur[calendar]", "murmur[tasks]", "murmur[tasks-tw]",
]
dev = ["murmur[all]", "pytest>=8.0", "mypy>=1.10", "ruff>=0.11", "pre-commit>=4.0"]

[project.scripts]
murmur = "murmur.cli:cli"

[project.entry-points."murmur.plugins"]
transcribe = "murmur.plugins.transcribe:register"
summarize = "murmur.plugins.summarize:register"
diarize = "murmur.plugins.diarize:register"
tui = "murmur.plugins.tui:register"
watch = "murmur.plugins.watch:register"
memory = "murmur.plugins.memory:register"
calendar = "murmur.plugins.calendar:register"
tasks = "murmur.plugins.tasks:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
